style: increase z-index for active-chats-container to avoid potential overlapping

--- a/src/screens/HomeScreen.module.css
+++ b/src/screens/HomeScreen.module.css
@@ -17,6 +17,7 @@
   overflow: visible;
   justify-content: right;
   pointer-events: visible;
+  z-index: 5;
 }
 
 .active-chats-bottom {
@@ -37,7 +38,14 @@
 }
 
 .chat-heads-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   animation: fadeIn 150ms ease-in backwards;
+  max-height: 80vh;
+  overflow: auto;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
 }
 
 @keyframes fadeIn {
